# services/telemetry-service/src/main/java/br/com/sussmartcare/telemetry/domain/DevicePlacementType.java
@@ -1,0 +1,7 @@
+package br.com.sussmartcare.telemetry.domain;
+
+public enum DevicePlacementType {
+  FACILITY,
+  CARE_ZONE,
+  AMBULANCE
+}
