# services/telemetry-service/src/main/java/br/com/sussmartcare/telemetry/infrastructure/DeviceRepository.java
@@ -1,1 +1,12 @@
-package br.com.sussmartcare.telemetry.infrastructure; import br.com.sussmartcare.telemetry.domain.*; import org.springframework.data.jpa.repository.JpaRepository; import java.util.*; public interface DeviceRepository extends JpaRepository<MedicalDevice,UUID>{Optional<MedicalDevice> findByExternalId(String externalId);}
+package br.com.sussmartcare.telemetry.infrastructure;
+
+import br.com.sussmartcare.telemetry.domain.MedicalDevice;
+import java.util.Optional;
+import java.util.UUID;
+import org.springframework.data.jpa.repository.JpaRepository;
+
+public interface DeviceRepository
+    extends JpaRepository<MedicalDevice, UUID> {
+
+  Optional<MedicalDevice> findByExternalId(String externalId);
+}
